--- a/GodotFrontend/.godot/editor/editor_layout.cfg
+++ b/GodotFrontend/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=601
+dock_hsplit_2=913
 dock_hsplit_3=-597
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/3d/trees/BirchTree_1.fbx")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Spells/", "res://assets/", "res://assets/UI/", "res://assets/UI/Spells/", "res://assets/tex/", "res://assets/3d/", "res://assets/3d/trees/", "res://assets/3d/trees/Meshes/")
+dock_filesystem_selected_paths=PackedStringArray("res://units/troops/longbeard25X25.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://units/", "res://units/troops/", "res://Spells/", "res://assets/", "res://assets/UI/Spells/", "res://assets/3d/", "res://assets/3d/troops/Orcs/", "res://assets/3d/trees/Meshes/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://Spells/fireball.tscn")
-current_scene="res://battlefield.tscn"
-center_split_offset=-648
+open_scenes=PackedStringArray("res://UICanvas.tscn", "res://battlefield.tscn", "res://assets/UI/Actions_button.tscn", "res://units/troops/base_unit.tscn", "res://Spells/fireball.tscn", "res://units/troops/goblin_club25X25.tscn", "res://units/troops/orc30x30.tscn", "res://units/troops/dwarf25x25.tscn", "res://units/troops/longbeard25X25.tscn")
+current_scene="res://units/troops/longbeard25X25.tscn"
+center_split_offset=-517
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 selected_bottom_panel_item=7
@@ -49,9 +49,9 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader", "res://tilitshift.gdshader", "res://SDFObjects.gdshader", "res://ObjectSDF.gdshader", "res://smokeSDF.gdshader", "res://fireballSmoke.gdshader"]
+open_shaders=["res://units/vfx/selectshader.gdshader", "res://Spellselectioncanvas.gdshader", "res://units/vfx/magicselectshader.gdshader", "res://assets/3d/grass/grass_blade_normals.gdshader", "res://code/terrainshader/battlefield.gdshader", "res://tilitshift.gdshader", "res://SDFObjects.gdshader", "res://ObjectSDF.gdshader", "res://smokeSDF.gdshader", "res://fireballSmoke.gdshader", "res://shaders/terrain.gdshader"]
 split_offset=200
-selected_shader="res://code/terrainshader/battlefield.gdshader"
+selected_shader="res://shaders/terrain.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
