--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Networking\ConnectToServer.cs.old" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="List\races\Dwarfs.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -38,6 +42,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
+    <PackageReference Include="NakamaClient" Version="3.21.0" />
   </ItemGroup>
 
   <ItemGroup>
